# wayland_remote_cast

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
onserve/: Cargo.toml
onserve/src/: main.rs
serve/: Cargo.toml
serve/src/: main.rs
widgets/: Cargo.toml
widgets/src/: lib.rs
widgets/src/portals/: camera.rs  mod.rs  remote_desktop.rs  screencast.rs  screencast_client.rs
widgets/src/widgets/: gst_paintable.rs  gst_paintable_client.rs  mod.rs  notification.rs  portal_page.rs  sidebar_row.rs
