[package]
name = "widgets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk-macros = "0.3"
once_cell = "1.5"
futures = "0.3"
gst_video = {package="gstreamer-video", version = "0.17"}
gst_base = {package="gstreamer-base", version = "0.17"}
gst = {package="gstreamer", version = "0.17"}
gtk = {package = "gtk4", version = "0.3"}
adw = {version = "0.1.0-alpha-6", package = "libadwaita"}
serde = {version = "1.0", features = ["derive"]}
axum = { version = "0.2.8", features = ["ws", "headers"]}
ws = "0.9.1"
lazy_static = "1.4.0"
[dependencies.ashpd]
git = "https://github.com/bilelmoussaoui/ashpd"
features = ["feature_gtk4", "feature_pipewire"]
